--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,5 @@
-@import "./reset.min.css";
+@import url("./reset.min.css");
+@import url("./grid.min.css");
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Vazirmatn:wght@100..900&display=swap');
 
 * {
