--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -269,3 +269,35 @@ section.work button.email span{
 section.work p{
     font-size: 24px;
 }
+
+.footer{
+    display: flex;
+    flex-direction: column;
+}
+
+.footer .social{
+    margin-top: 40px;
+}
+
+.footer .social ul{
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+}
+
+.footer .social ul li{
+    display: inline;
+}
+
+.footer .social ul li a ion-icon{
+    font-size: 28px;
+    padding: 5px;
+}
+
+.footer span{
+    text-align: center;
+    margin: 30px 0;
+    color: #a9a9a9;
+    font-size: 14px;
+    font-weight: 300;
+}
