--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -71,6 +71,45 @@ li{
     transform: translateY(-7px) rotate(45deg);
 }
 
+.navbar .bars-navbar-portfolio .hamburger-menu {
+    background-color: transparent;
+    backdrop-filter: blur(25px);
+    width: 75%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    padding: 1.5rem;
+    z-index: 777;
+}
+
+.navbar .bars-navbar-portfolio .hamburger-menu li {
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.navbar .bars-navbar-portfolio .hamburger-menu li:hover {
+    border-radius: 1rem;
+}
+
+.navbar .bars-navbar-portfolio .hamburger-menu li a {
+    color: var(--white);
+}
+
+.navbar .bars-navbar-portfolio input#hamburger:checked ~ .hamburger-menu {
+    transform: translateX(0);
+}
+
 .header{
     text-align: center;
     margin-top: 100px;
