--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -1,6 +1,6 @@
 @import url("./reset.min.css");
 @import url("./grid.min.css");
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Vazirmatn:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Google+Sans:ital,opsz,wght@0,17..18,400..700;1,17..18,400..700&display=swap');
 
 * {
     margin: 0;
@@ -14,7 +14,7 @@
 }
 
 body{
-    font-family: "Open Sans";
+    font-family: "Google Sans", sans-serif;
     background-color: var(--black);
     color: var(--white);
 }
@@ -35,15 +35,25 @@ li{
 }
 
 .navbar{
+    width: 100%;
+    height: 65px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-top: 30px;
     padding: 0 10%;
+    position: sticky;
+    top: 0;
+    background-color: transparent;
+    backdrop-filter: blur(25px);
+    z-index: 10;
 }
 
 .navbar strong{
     font-size: 22px;
+}
+
+.navbar .bars-navbar-portfolio{
+    display: flex;
 }
 
 .navbar .bars-navbar-portfolio input{
@@ -72,14 +82,12 @@ li{
 }
 
 .navbar .bars-navbar-portfolio .hamburger-menu {
-    background-color: transparent;
-    backdrop-filter: blur(25px);
     width: 75%;
-    height: 100%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    transform: translateX(-100%);
+    height: 100vh;
+    position: absolute;
+    top: 65px;
+    right: 0;
+    transform: translateX(100%);
     transition: transform 0.5s ease-in-out;
     display: flex;
     flex-direction: column;
@@ -87,7 +95,9 @@ li{
     align-items: center;
     gap: 1.5rem;
     padding: 1.5rem;
-    z-index: 777;
+    background-color: #1f1f1f;
+    /* backdrop-filter: blur(25px); */
+    z-index: 9;
 }
 
 .navbar .bars-navbar-portfolio .hamburger-menu li {
@@ -96,6 +106,8 @@ li{
     display: flex;
     justify-content: center;
     align-items: center;
+    position: relative;
+    bottom: 65px;
 }
 
 .navbar .bars-navbar-portfolio .hamburger-menu li:hover {
